# bag-health-mcp

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  README.de.md  README.md  ci.yml  claude_desktop_config.json  publish.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/bag_health_mcp/: __init__.py  server.py
tests/: test_server.py
