[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bag-health-mcp"
version = "0.1.0"
description = "MCP server for Swiss Federal Office of Public Health (BAG) infectious disease surveillance — IDD API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "malkreide" }]
keywords = [
    "mcp", "bag", "bundesamt-gesundheit", "infectious-diseases", "surveillance",
    "public-health", "switzerland", "idd", "influenza", "covid19", "epidemiology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=1.26.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/malkreide/bag-health-mcp"
Repository = "https://github.com/malkreide/bag-health-mcp"
Issues = "https://github.com/malkreide/bag-health-mcp/issues"

[project.scripts]
bag-health-mcp = "bag_health_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bag_health_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: mark test as requiring live BAG API access"]
